Made scanning of subfolders for mods false by default. It can cause a bunch of issues (resulting from user confusion, not bugs), and for most serves no useful purpose.

--- a/NexusClient/Properties/Settings.settings
+++ b/NexusClient/Properties/Settings.settings
@@ -30,7 +30,7 @@
 			<Value Profile="(Default)">False</Value>
 		</Setting>
 		<Setting Name="ScanSubfoldersForMods" Type="System.Boolean" Scope="User">
-			<Value Profile="(Default)">True</Value>
+			<Value Profile="(Default)">False</Value>
 		</Setting>
 		<Setting Name="RepositoryAuthenticationTokens" Type="Nexus.Client.Settings.KeyedSettings`1[Nexus.Client.Settings.KeyedSettings`1[System.String]]" Scope="User">
 			<Value Profile="(Default)">
