Added Skyrim support.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -34,6 +34,12 @@
 					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
 					  name="FO3NexusREST" >
 			</endpoint>
+			<endpoint address="http://skyrim.axel.tesnexus.com/"
+					  binding="webHttpBinding"
+					  bindingConfiguration="NexusBinding"
+					  contract="Nexus.Client.ModRepositories.Nexus.INexusModRepositoryApi"
+					  name="SKYRIMNexusREST" >
+			</endpoint>
 		</client>
 		<bindings>
 			<webHttpBinding>
