Added mod manager's homepage URL.

--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -52,7 +52,7 @@
 	<applicationSettings>
 		<Nexus.Client.Properties.Settings>
 			<setting name="ModManagerUrl" serializeAs="String">
-				<value>http://where/to/get/the/nexus/client</value>
+				<value>http://www.tesnexus.com/content/modmanager/</value>
 			</setting>
 		</Nexus.Client.Properties.Settings>
 	</applicationSettings>
