--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -87,6 +87,7 @@
     <Compile Include="IniMethods.cs" />
     <Compile Include="Threading\TrackedThread.cs" />
     <Compile Include="Threading\TrackedThreadManager.cs" />
+    <Compile Include="UriUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
