Replaced all uses of ObservableCollection with ThreadSafeObservableList. The ObservableCollection doesn't allow thread safe iteration without external synchronization, and external synchronization is inherently not thread safe. ThreadSafeObservableList performs all of its whole-list operations (like GetEnumerator()) on a snashot of the list, and does some locking to prevent threading issues.

--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Downloader\Range.cs" />
     <Compile Include="Downloader\RangeSet.cs" />
     <Compile Include="IniMethods.cs" />
+    <Compile Include="ThreadSafeObservableList.cs" />
     <Compile Include="Threading\TrackedThread.cs" />
     <Compile Include="Threading\TrackedThreadManager.cs" />
     <Compile Include="UriUtil.cs" />
