--- a/Skyrim/Skyrim.csproj
+++ b/Skyrim/Skyrim.csproj
@@ -53,6 +53,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Tools\AI\ArchiveInvalidation.cs" />
+    <Compile Include="Tools\AI\UI\ArchiveInvalidationView.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Tools\SkyrimToolLauncher.cs" />
   </ItemGroup>
   <ItemGroup>
