--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ThreadSafeObservableList.cs" />
     <Compile Include="Threading\TrackedThread.cs" />
     <Compile Include="Threading\TrackedThreadManager.cs" />
+    <Compile Include="TraceUtil.cs" />
     <Compile Include="UriUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
