--- a/Util/Util.csproj
+++ b/Util/Util.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CancelProgressEventArgs.cs" />
+    <Compile Include="Crc32.cs" />
     <Compile Include="Downloader\FileDownloader.BlockDownloader.cs" />
     <Compile Include="Downloader\FileDownloader.cs" />
     <Compile Include="Downloader\FileMetadata.cs" />
