--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -155,6 +155,11 @@
 					<KeyedSettingsOfKeyedSettingsOfString />
 				</value>
 			</setting>
+			<setting name="DelayedSettings" serializeAs="Xml">
+				<value>
+					<PerGameModeSettingsOfKeyedSettingsOfString />
+				</value>
+			</setting>
 		</Nexus.Client.Properties.Settings>
 	</userSettings>
 </configuration>
