Fixed extended message box layout to account for remember selection checkbox.

--- a/Controls/Controls.csproj
+++ b/Controls/Controls.csproj
@@ -190,6 +190,9 @@
     <EmbeddedResource Include="ColourPicker.resx">
       <DependentUpon>ColourPicker.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ExtendedMessageBox.resx">
+      <DependentUpon>ExtendedMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FileSelectionDialog.resx">
       <DependentUpon>FileSelectionDialog.cs</DependentUpon>
     </EmbeddedResource>
