--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -120,6 +120,11 @@
 					<WindowPositions />
 				</value>
 			</setting>
+			<setting name="DockPanelLayouts" serializeAs="Xml">
+			<value>
+				<KeyedSettingsOfString />
+			</value>
+		</setting>
 			<setting name="ColumnWidths" serializeAs="Xml">
 				<value>
 					<ColumnWidths />
