--- a/NexusClient/NexusClient.csproj
+++ b/NexusClient/NexusClient.csproj
@@ -97,7 +97,7 @@
     <Compile Include="ModManagement\ModManager.cs" />
     <Compile Include="ModManagement\ModRegistry.cs" />
     <Compile Include="ModManagement\UI\ModManagerControl.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="ModManagement\UI\ModManagerControl.Designer.cs">
       <DependentUpon>ModManagerControl.cs</DependentUpon>
@@ -191,9 +191,11 @@
     <Content Include="data\7z-64bit.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="data\LICENCE.rtf">
+    <Content Include="data\TxFileMAnager Licence.txt" />
+    <Content Include="data\Nexus Mod Manager Licence.rtf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="data\Licence.rtf" />
     <None Include="Resources\down.png" />
     <None Include="Resources\change_game_mode.png" />
     <None Include="Resources\media-playback-pause-7.png" />
@@ -203,6 +205,9 @@
     <None Include="Resources\edit-clear-3.png" />
     <None Include="Resources\info_add.png" />
     <None Include="Resources\dialog-warning-4.png" />
+    <None Include="data\DockPanel Suite Licence.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="Resources\tes_logo.ico" />
     <None Include="Resources\tes_logo_full.png" />
     <None Include="Resources\up.png" />
@@ -212,7 +217,7 @@
     <Compile Include="ActivityMonitoring\ActivityMonitor.cs" />
     <Compile Include="ActivityMonitoring\UI\ActivityListViewItem.cs" />
     <Compile Include="ActivityMonitoring\UI\ActivityMonitorControl.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="ActivityMonitoring\UI\ActivityMonitorControl.Designer.cs">
       <DependentUpon>ActivityMonitorControl.cs</DependentUpon>
@@ -288,7 +293,7 @@
     <Compile Include="PluginManagement\PluginRegistry.cs" />
     <Compile Include="PluginManagement\PluginRegistry.TransactionEnlistment.cs" />
     <Compile Include="PluginManagement\UI\PluginManagerControl.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="PluginManagement\UI\PluginManagerControl.Designer.cs">
       <DependentUpon>PluginManagerControl.cs</DependentUpon>
@@ -385,6 +390,10 @@
     <ProjectReference Include="..\Controls\Controls.csproj">
       <Project>{5EDD4E37-B8F3-403D-A2E9-AFF31B21A236}</Project>
       <Name>Controls</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DockPanelSuite\DockPanelSuite.csproj">
+      <Project>{C75532C4-765B-418E-B09B-46D36B2ABDB1}</Project>
+      <Name>DockPanelSuite</Name>
     </ProjectReference>
     <ProjectReference Include="..\ModManager.Interface\ModManager.Interface.csproj">
       <Project>{33F65739-7CFB-4EC1-89EF-8B0B5440AB82}</Project>
