Incremented version to 0.13.2

--- a/DockPanelSuite/DockPanelSuite.csproj
+++ b/DockPanelSuite/DockPanelSuite.csproj
@@ -194,9 +194,8 @@
     <EmbeddedResource Include="Docking\DockPanel.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="License.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Content Include="License.txt">
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
