Fixed antlr grammar generation. The solution now compiles from clean. Previously, after the switch to the new antlr was made, the solution wouldn't compile from clean; the problem was hidden due to cached files.

--- a/Fallout3.XmlScript/Fallout3.XmlScript.csproj
+++ b/Fallout3.XmlScript/Fallout3.XmlScript.csproj
@@ -32,9 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Antlr3-2.Runtime.DotNet20, Version=3.1.3.39007, Culture=neutral, PublicKeyToken=3a9cab8f8d22bfb7, processorArchitecture=MSIL">
+    <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Antlr3-2.Runtime.DotNet20.dll</HintPath>
+      <HintPath>..\lib\Antlr\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.TextEditor, Version=3.2.1.6466, Culture=neutral, PublicKeyToken=4d61825e8dd49f1a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -54,11 +54,7 @@
   <ItemGroup>
     <Compile Include="CPL\Controls\FO3CplHighlightingStrategy.cs" />
     <Compile Include="CPL\FO3CplConverter.cs" />
-    <Compile Include="CPL\FO3CplLexer.cs" />
-    <Compile Include="CPL\FO3CplLexer_CPLLexer.cs" />
-    <Compile Include="CPL\FO3CplParser.cs" />
     <Compile Include="CPL\FO3CplParserFactory.cs" />
-    <Compile Include="CPL\FO3CplParser_CPLParser.cs" />
     <Compile Include="Fallout3ConditionStateManager.cs" />
     <Compile Include="Fallout3XmlScriptType.cs" />
     <Compile Include="FoseCondition.cs" />
@@ -81,8 +77,12 @@
     <Compile Include="XmlScript40NodeAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CPL\FO3CplLexer.g" />
-    <None Include="CPL\FO3CplParser.g" />
+    <Antlr3 Include="CPL\FO3CplLexer.g">
+      <Generator>MSBuild:Compile</Generator>
+    </Antlr3>
+    <Antlr3 Include="CPL\FO3CplParser.g">
+      <Generator>MSBuild:Compile</Generator>
+    </Antlr3>
     <EmbeddedResource Include="data\XmlScript5.0.xsd" />
     <EmbeddedResource Include="data\XmlScript4.0.xsd" />
     <EmbeddedResource Include="data\XmlScript3.0.xsd" />
@@ -90,6 +90,10 @@
     <EmbeddedResource Include="data\XmlScript1.0.xsd" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AntlrUtil\AntlrUtil.csproj">
+      <Project>{8B2AD10B-4E22-4559-A784-648179225ADC}</Project>
+      <Name>AntlrUtil</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Controls\Controls.csproj">
       <Project>{5EDD4E37-B8F3-403D-A2E9-AFF31B21A236}</Project>
       <Name>Controls</Name>
@@ -126,6 +130,7 @@
     <AntlrBuildTaskPath>$(SolutionDir)\lib\Antlr</AntlrBuildTaskPath>
     <!-- Path to the ANTLR Tool itself. -->
     <AntlrToolPath>$(SolutionDir)\lib\Antlr\Antlr3.exe</AntlrToolPath>
+	<AntlrLibPaths>$(SolutionDir)\XmlScript\CPL</AntlrLibPaths>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\lib\Antlr\Antlr3.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
