--- a/XmlScript/XmlScript.csproj
+++ b/XmlScript/XmlScript.csproj
@@ -33,9 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Antlr3-2.Runtime.DotNet20, Version=3.1.3.39007, Culture=neutral, PublicKeyToken=3a9cab8f8d22bfb7, processorArchitecture=MSIL">
+    <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Antlr3-2.Runtime.DotNet20.dll</HintPath>
+      <HintPath>..\lib\Antlr\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.TextEditor, Version=3.2.1.6466, Culture=neutral, PublicKeyToken=4d61825e8dd49f1a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -210,13 +210,7 @@
       <DependentUpon>CplVersionConditionEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="CPL\CPLConverter.cs" />
-    <Compile Include="CPL\CPLLexer.cs" />
-    <Compile Include="CPL\CPLLexerBase.cs" />
-    <Compile Include="CPL\CPLParser.cs" />
-    <Compile Include="CPL\CPLParserBase.cs" />
-    <Compile Include="CPL\ErrorTracker.cs" />
     <Compile Include="CPL\ICplParserFactory.cs" />
-    <Compile Include="CPL\LanguageError.cs" />
     <Compile Include="FlagCondition.cs" />
     <Compile Include="GameVersionCondition.cs" />
     <Compile Include="HeaderInfo.cs" />
@@ -279,6 +273,10 @@
     <Compile Include="XmlScript.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AntlrUtil\AntlrUtil.csproj">
+      <Project>{8B2AD10B-4E22-4559-A784-648179225ADC}</Project>
+      <Name>AntlrUtil</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ChinhDo.Transactions.FileManager\ChinhDo.Transactions.FileManager.csproj">
       <Project>{E824ACBB-90C8-4C60-9D52-9C8020E98E3E}</Project>
       <Name>ChinhDo.Transactions.FileManager</Name>
@@ -374,8 +372,12 @@
     <None Include="Resources\delete.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CPL\CPLLexer.g" />
-    <None Include="CPL\CPLParser.g" />
+    <Antlr3 Include="CPL\CPLLexer.g">
+      <Generator>MSBuild:Compile</Generator>
+    </Antlr3>
+    <Antlr3 Include="CPL\CPLParser.g">
+      <Generator>MSBuild:Compile</Generator>
+    </Antlr3>
     <None Include="Resources\edit.png" />
   </ItemGroup>
   <ItemGroup>
@@ -388,6 +390,9 @@
     <None Include="Resources\add-option.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CPL\CPLImportParser.g">
+    </None>
+    <None Include="CPL\CPLImportLexer.g" />
     <None Include="Resources\add-file-set.png" />
     <EmbeddedResource Include="Schemas\XmlScript5.0.xsd" />
   </ItemGroup>
