--- a/ModManager.Interface/ModManager.Interface.csproj
+++ b/ModManager.Interface/ModManager.Interface.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{33F65739-7CFB-4EC1-89EF-8B0B5440AB82}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -151,9 +151,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Games\Settings\RequiredDirectoriesControl.resx">
       <DependentUpon>RequiredDirectoriesControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Games\WorkingDirectorySelectionForm.resx">
       <DependentUpon>WorkingDirectorySelectionForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
