--- a/NexusClient/app.config
+++ b/NexusClient/app.config
@@ -61,6 +61,15 @@
 			<setting name="SettingsUpgraded" serializeAs="String">
 				<value>False</value>
 			</setting>
+			<setting name="InstalledGames" serializeAs="Xml">
+				<value>
+					<ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+				</value>
+			</setting>
+			<setting name="InstalledGamesDetected" serializeAs="String">
+				<value>False</value>
+			</setting>
 			<setting name="RememberedGameMode" serializeAs="String">
 				<value />
 			</setting>
