--- a/Controls/Controls.csproj
+++ b/Controls/Controls.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5EDD4E37-B8F3-403D-A2E9-AFF31B21A236}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -121,6 +121,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="PanelToolStripItem.cs" />
+    <Compile Include="PathLabel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PromptDialog.cs">
       <SubType>Form</SubType>
     </Compile>
