--- a/GamebryoBase/GamebryoBase.csproj
+++ b/GamebryoBase/GamebryoBase.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0055FB79-3587-486E-A87E-70304A61D7A4}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -52,6 +52,8 @@
     <Compile Include="ModManagement\GamebryoGameSpecificValueUpgradeInstaller.cs" />
     <Compile Include="ModManagement\GamebryoGameSpecificValueInstaller.cs" />
     <Compile Include="ModManagement\Scripting\BsaManager.cs" />
+    <Compile Include="PluginManagement\Boss\BossSorter.cs" />
+    <Compile Include="PluginManagement\Boss\BossException.cs" />
     <Compile Include="PluginManagement\GamebryoPluginOrderValidator.cs" />
     <Compile Include="PluginManagement\GamebryoPluginDiscoverer.cs" />
     <Compile Include="PluginManagement\GamebryoPluginFactory.cs" />
@@ -134,6 +136,14 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Tools\TESsnip\ScriptCompiler\ScriptFunctions.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="data\boss32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="data\boss64.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\lib\AutoIncrementVersion.targets" />
